# leapfrogai-backend-text-embeddings

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: docker-publish.yaml  e2e.yaml  publish-release-artifacts.yaml  release.yaml
scripts/: model_download.py
tests/: test.py
tests/e2e/: README.md  test_e2e.py
