[project]
name = "leapfrogai-backend-embeddings"
version = "0.1.0"

description = "Embeddings backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.4, <3.12"
dependencies = [
    "leapfrogai == 0.4.0",
    "InstructorEmbedding >= 1.0.1",
    "torch == 2.1.2",
    "numpy == 1.26.3",
    "tqdm == 4.66.1",
    "sentence-transformers == 2.2.2"
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort"]

[tool.pip-tools]
generate-hashes = true
