[project]
name = "leapfrogai-backend-embeddings"
version = "0.1.0"

description = "Embeddings backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "== 3.11.6"
dependencies = [
    "leapfrogai == 0.4.0",
    "InstructorEmbedding >= 1.0.1",
    "torch == 2.1.2",
    "numpy == 1.26.3",
    "tqdm == 4.66.1",
    "sentence-transformers == 2.2.2",
    "jinja2 == 3.1.3",
    "transformers == 4.36.0",
    "urllib3 == 2.2.2",
    "pillow == 10.2.0",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort"]

[tool.pip-tools]
generate-hashes = true
